# url-shortener

./: .gitignore  Dockerfile  api.oas.yaml  docker-compose.yaml  entrypoint.bash  pyproject.toml  uwsgi.yaml
src/urlshortener/: __main__.py  config.py  main.py
src/urlshortener/contrib/: db.py  generator.py
src/urlshortener/templates/: index.html
src/urlshortner/: main.py
src/urlshortner/templates/: index.html
